tests/NormalTests/paczka1/fuzzy1/38616926.err
Error in line 10: jWTjH A750 93,4
Error in line 12: jWTjH A456 10,5
Error in line 13: jWTjH A433 14,8
Error in line 16: uIccSiJN9 A750 1,4
Error in line 21: WR4ml3 A433 94,9
Error in line 26: WR4ml3 A750 25,5
Error in line 23: 2mQprnlEgPB A433 12,6
Error in line 20: uIccSiJN9 S71 23,4
Error in line 28: 2mQprnlEgPB S71 21,2
Error in line 27: WR4ml3 A456 61,4
Error in line 22: h2u A750 1,3
